--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-BS5GJYJQ0E
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
