--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,19 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Istanbul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Harvested | Game Development Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Development Insights & Updates on the Survival Game Harvested # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Follow the development journey of Harvested, a survival multiplayer game. 
+  Get updates on features, design, mechanics, and behind-the-scenes insights 
+  from the developers and share your ideas to shape the development.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -102,7 +104,7 @@ avatar:
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: assets/images/harvested_logo.png # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
