--- a/_config.yml
+++ b/_config.yml
@@ -28,20 +28,20 @@ description: >- # used by seo meta and the atom feed
 url: "https://harvestedofficial.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: yanard18 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: DenizYanar_Dev # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Deniz Yanar
+  email: yanard18@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/denizyanar_dev # change to your Twitter homepage
+    - https://github.com/yanard18 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -100,11 +100,11 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/images/harvested_logo.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: assets/images/harvested_logo.png # string, local or CORS resources
+social_preview_image: # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
