--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Europe/Istanbul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Harvested | Game Development Blog # the main title
+title: Harvested Game Development Blog # the main title
 
 tagline: Development Insights & Updates on the Survival Game Harvested # it will display as the subtitle
 
