--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ theme_mode: # [light | dark]
 cdn: https://harvested-public-f57dc161-afb4-4823-abdd-425f1c3e9418.s3.eu-central-1.amazonaws.com/media
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/img/harvested_logo.png
+avatar: /images/harvested-logo.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
