--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://harvestedofficial.github.io"
+url: "https://playtarnish.github.io"
 
 github:
   username: yanard18 # change to your GitHub username
